bug 231426 : CJK native font names are not recognized on non-CJK Windows (r=rbs, sr=dbaron)